# web-load-tester

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: build.yml  ci.yml  docker.yml  main.yml  release.yml  simple.yml  test.yml
src/: main.rs  metrics.rs
static/: index.html
