[package]
name = "web-load-tester"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3"
colored = "2.1"
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1" 